# my-flask-sa-codebase

./: .env  .gitignore  README.md  alembic.ini  bootstrap  manage  pyproject.toml
alembic/: env.py
alembic/versions/: 20230516190500_0e30bca0613f_init_db.py
misc/docker/: .env  docker-compose.yml  init-db.sh
src/myproject/: app.py  config.py  containers.py  errors.py  gunicorn_cfg.py  healthchecks.py  reverse_proxy_url_scheme.py  wsgi.py
src/myproject/blueprints/: root.py
src/myproject/blueprints/api/: __init__.py  auth.py  posts.py  users.py
src/myproject/cli/: __main__.py  cli.py
src/myproject/core/: errors.py
src/myproject/domain/: datatypes.py
src/myproject/domain/interfaces/: usecases.py
src/myproject/domain/interfaces/usecases/: __init__.py  healthcheck.py  post.py  user.py
src/myproject/repository/: db.py  model.py
src/myproject/tests/: conftest.py  test_app.py
src/myproject/tests/blueprints/: test_healthcheck.py
src/myproject/tests/blueprints/api/: test_auth.py  test_post.py  test_user.py
src/myproject/tests/fixtures/: app.py
src/myproject/usecases/: healthchecks.py  post.py  user.py
