[tool.poetry]
name = "my-flask-sa-codebase"
version = "0.1.0"
description = ""
authors = ["Edbert Wijaya Irawan"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.3.3"
SQLAlchemy = "^2.0.17"
fire = "^0.5.0"
psycopg2-binary = "^2.9.6"
gevent = "^22.10.2"
alembic = "^1.11.1"
passlib = {extras = ["argon2"], version = "^1.7.4"}
marshmallow-dataclass = "^8.5.14"
gunicorn = {version = "^20.1.0", optional = true}
psycogreen = "^1.0.2"
Flask-Login = "^0.6.2"

[tool.poetry.dev-dependencies]

[tool.poetry.extras]
release = ["gunicorn"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
