[tool.poetry]
name = "my-flask-sa-codebase"
version = "0.1.0"
description = ""
authors = ["Edbert Wijaya Irawan"]

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.0.0"
SQLAlchemy = "^2.0.23"
fire = "^0.5.0"
psycopg2-binary = "^2.9.6"
gevent = "^22.10.2"
alembic = "^1.12.1"
passlib = {extras = ["argon2"], version = "^1.7.4"}
marshmallow-dataclass = "^8.6.0"
gunicorn = {version = "^20.1.0", optional = true}
psycogreen = "^1.0.2"
Flask-Login = "^0.6.3"
redis = "^5.0.1"
dependency-injector = "^4.41.0"

[tool.poetry.dev-dependencies]

[tool.poetry.extras]
release = ["gunicorn"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
